# Workstation

./: README.md
PCB/GasAnalyzer/: Ethernet_v2.SchDot  SensorReader.PrjPcb  SensorReader.SchDot
PCB/MetalDetector/: MetalDetector.PrjPcb  MetalDetector.PrjPcbStructure  MetalDetector.SchDot
PCB/PressCounter/: BOM.OutJob  CAMtastic1.Cam  GERBER.OutJob  PressCounter.PrjPcb  PressCounter.PrjPcbStructure  PressCounter.SchDot
PCB/SensorArray/: SensorArray.PcbDoc
PCB/Suspension/: Suspension.PcbDoc  Suspension.SchDot  SuspensionV2.PcbDoc  SuspensionV2.SchDot
PCB/TimerHs/: BOM.OutJob  Timers.SchDot
PCB/TimerSl/: BOM.OutJob  TimerSl.PrjPcb  TimerSl.PrjPcbStructure  TimerSl.SchDot  Timers.SchDot
Python/AttendanceSystem/: Host_v1.1.py  attendance.csv  attendance.db  attendance.py  camera_app.py  camera_app_v2.py  camera_app_v3.py  runAll.py  slave_v1.1.py  slave_v1.2.py  slave_v2.1.py  testModel.py  testTrain.py  train.pkl
Qt/GasAnalyzser/: SensorReader_V1.pro  SensorReader_V1.pro.user.0b250ae  SensorReader_V1.pro.user.771528f  logdata.cpp  logdata.h  qmodbus.cpp  qmodbus.h  serialport.cpp  tcpsocket.h
Qt/GassAnalyzser/: SensorReader_V1.pro.user.1dffc63  logdata.cpp  main.cpp  main.qml  modbusctr.cpp  modbusctr.h  serialport.cpp  serialport.h  tcpsocket.cpp
Qt/HumidityMeter/: calibration.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/MoistureDetection/: MoistureCapture.pro  MoistureCapture.pro.user.0b250ae  MoistureCapture.pro.user.1dffc63  (+4 more)
Qt/Work/Qt/WeatherStatus/WeatherStatus_V1_0/: CMakeLists.txt  main.cpp  resources.qrc  weatherapi.h
(+2477 files in other folders)
